# WECO

./: CMakeLists.txt  README.md  main.cpp  qml.qrc
qml/: Main.qml  Menu.qml  Toolbar.qml
qml/fonts/: FontAwesome.qml
qml/general/: Error.qml  Loading.qml
qml/menu/: Add.qml  Back.qml  MenuItem.qml  Power.qml  Services.qml  Settings.qml
qml/menu/services/: Programs.qml
qml/menu/settings/: CPU.qml  Disk.qml  RAM.qml  USB.qml
qml/startup/: New.qml  Startup.qml
services/: compile.sh  install.bat  main.c
src/: ecopen.cpp  power.cpp  power.h  server.cpp  server.h  settings.cpp  settings.h  startup.cpp  startup.h  virt.cpp  virt.h
src/spice/: spice-view.cpp  spice-view.h  spice-widget.cpp  spice-widget.h  spice.cpp  spice.h
